--- a/home.css
+++ b/home.css
@@ -12,7 +12,7 @@
 body {
 
         font-size: 100%;
-        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+        background-color: rgb(58, 58, 58);
         width: 100%;
 
 }
