--- a/index.css
+++ b/index.css
@@ -13,12 +13,12 @@ body, html {
     
         height: 100vh; 
         width: 100vw;  
-        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
         display: flex; 
         justify-content: center; 
         align-items: center;
 
 }
+
 
 .content {
 
@@ -41,13 +41,25 @@ header {
 
 header h1 {
 
-        font-family:  "Roboto";
+     font-family: 'Righteous', cursive;
         font-weight: bold;
-        color: #F0FBFA;
+        color: #ffffff;
         font-size: 6.4rem;
         margin-left: 25px;
+        transition: .5s;
 
 }
+header h1:hover {
+
+     font-family: 'Righteous', cursive;
+        font-weight: bold;
+        color: #aeaeae;
+        font-size: 6.4rem;
+        margin-left: 25px;
+        transition: .5s;
+
+}
+
 
 main {
 
@@ -75,6 +87,7 @@ main form {
         border: 2px solid #def7f4;
         flex-direction: row-reverse;
         transition: .3s;
+        margin-top: 8px;
         
 
 }
@@ -183,6 +196,7 @@ main form {
      font-size: 3rem;
      font-family: "Rubik";
      transition: .3s;
+     margin-top: 20px;
 
 }
 
