--- a/import.css
+++ b/import.css
@@ -9,3 +9,9 @@ h2 {
     color: rgb(170, 168, 168);
     font-family: 'Sarala', sans-serif;
 }
+.accordion {
+    color: rgb(31, 31, 31);
+    background-color: rgb(17, 14, 14);
+}
+
+  
