--- a/sistema.css
+++ b/sistema.css
@@ -55,6 +55,9 @@ body {
 h1 {
 
         margin: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
 }
 ul {
